--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
+    "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "router": "^1.3.8",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
