--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dotgit": "^0.1.1",
     "express": "^4.21.0",
     "mysql2": "^3.11.2",
     "nodemon": "^3.1.4"
